NO-ISSUE: add colors for critical level event

--- a/discovery-infra/events.html
+++ b/discovery-infra/events.html
@@ -69,7 +69,8 @@
 							// ITERATING THROUGH OBJECTS
 							$.each(data, function (key, value) {
 								let severity_to_colors = {
-									'error': ['white', '#810000'],
+									'critical': ['white', '#810000'],
+									'error': ['white', 'red'],
 									'warning': ['black', '#E8E9A1'],
 									'info': ['black', '#A3DDCB'],
 								};
